quelques refactoring
